--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,15 @@ php:
     - 7.0.22
     - 7.1
 
+env:
+  global:
+    - APP_ENV=staging
+    - APP_DEBUG=true
+    - DB_CONNECTION=testing
+    - CACHE_DRIVER=file
+    - SESSION_DRIVER=file
+    - QUEUE_DRIVER=sync
+
 matrix:
   fast_finish: true
 
@@ -64,7 +73,7 @@ branches:
 notifications:
      email:
         on_success: never
-        on_failure: always
+        on_failure: never
 
 # You can delete cache using travis-ci web interface
 cache:
